infra/k8s/docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: kujua-time
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: ghcr.io/example/kujua-time-docs:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: kujua-time
spec:
  selector:
    app: docs
  ports:
    - port: 3001
      targetPort: 3001
